# music_recommender

./: .gitignore  .pre-commit-config.yaml  dsa  explore.ipynb  pyproject.toml
src/music_recommender/: app.py  recommender.py  utils.py
