[tool.poetry]
name = "online-music-market-recsys"
version = "0.1.0"
description = ""
authors = [
    "Artyom Sosedka <m1801239@edu.misis.ru>, Pavel Dolgodvorov <toeyech@yandex.ru>",
]
readme = "README.md"
packages = [{ include = "music_recommender", from = "src" }]

[tool.poetry.dependencies]
python       = "~3.11"
numpy        = "^1.26.2"
pandas       = "^2.1.4"
shiny        = "^0.6.0"
shinyswatch  = "^0.4.2"
scipy        = "^1.11.4"
scikit-learn = "^1.3.2"
streamlit    = "^1.30.0"

[tool.poetry.group.dev.dependencies]
ruff       = "*"
mypy       = "*"
jupyter    = "*"
pre-commit = "*"
ipywidgets = "*"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs     = true
plugins                = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 99

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
